refactor: rename starter_app to sertantai_hub across entire project
- Rename backend directories: lib/starter_app -> lib/sertantai_hub
- Rename all modules: StarterApp -> SertantaiHub, StarterAppWeb -> SertantaiHubWeb
- Update config, docker-compose, CI, deployment scripts, and documentation
- Fix .mcp.json Tidewave port (4000 -> 4006)
- Fix database/init.sql naming
- Add {:req, ~> 0.5} as direct dependency
- Add auth_service_url config for auth proxy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: starter_app_test
+          POSTGRES_DB: sertantai_hub_test
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
