--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,8 +9,8 @@
 # ==============================================================================
 # For development: Connect to local PostgreSQL via Docker
 # For production: Use DATABASE_URL provided by infrastructure (host: postgres)
-DATABASE_URL=postgresql://postgres:postgres@localhost:5435/starter_app_dev
-ELECTRIC_DATABASE_URL=postgresql://postgres:postgres@localhost:5435/starter_app_electric
+DATABASE_URL=postgresql://postgres:postgres@localhost:5435/sertantai_hub_dev
+ELECTRIC_DATABASE_URL=postgresql://postgres:postgres@localhost:5435/sertantai_hub_electric
 
 # ==============================================================================
 # Phoenix Configuration
@@ -45,11 +45,17 @@ ELECTRIC_PROXY_URL=http://localhost:3000
 ELECTRIC_WRITE_TO_PG_MODE=direct_writes
 
 # ==============================================================================
+# Auth Service (sertantai-auth)
+# ==============================================================================
+# URL of the auth service for proxying login/register/refresh requests
+AUTH_SERVICE_URL=http://localhost:4000
+
+# ==============================================================================
 # Authentication (if using)
 # ==============================================================================
 # Generate GUARDIAN_SECRET_KEY with: mix guardian.gen.secret
 GUARDIAN_SECRET_KEY=<generate-with-mix-guardian.gen.secret>
-GUARDIAN_ISSUER=starter_app
+GUARDIAN_ISSUER=sertantai_hub
 TOKEN_SIGNING_SECRET=<generate-secure-secret>
 
 # Shape Tokens
@@ -67,7 +73,7 @@ MIX_ENV=dev
 # These should be set in your infrastructure/deployment environment
 # DO NOT use development values in production!
 #
-# DATABASE_URL=postgresql://postgres:password@postgres:5432/starter_app_prod
+# DATABASE_URL=postgresql://postgres:password@postgres:5432/sertantai_hub_prod
 # SECRET_KEY_BASE=<64+ character production secret>
 # PHX_HOST=api.yourdomain.com
 # FRONTEND_URL=https://app.yourdomain.com
