--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
-version: '3.8'
+version: "3.8"
 
 networks:
-  starter_app_network:
+  sertantai_hub_network:
     driver: bridge
 
 services:
@@ -11,14 +11,14 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: starter_app_dev
+      POSTGRES_DB: sertantai_hub_dev
     ports:
       - "5435:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database/init.sql:/docker-entrypoint-initdb.d/01-init.sql
     networks:
-      - starter_app_network
+      - sertantai_hub_network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -39,14 +39,14 @@ services:
   electric:
     image: electricsql/electric:latest
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/starter_app_dev
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/sertantai_hub_dev
       HTTP_PORT: 3000
-      ELECTRIC_INSECURE: "true"  # Development only! Use ELECTRIC_SECRET in production
-      PG_PROXY_PASSWORD: proxy_password  # Secure in production!
+      ELECTRIC_INSECURE: "true" # Development only! Use ELECTRIC_SECRET in production
+      PG_PROXY_PASSWORD: proxy_password # Secure in production!
     ports:
-      - "3000:3000"  # HTTP API for Shape-based sync
+      - "3000:3000" # HTTP API for Shape-based sync
     networks:
-      - starter_app_network
+      - sertantai_hub_network
     depends_on:
       postgres:
         condition: service_healthy
@@ -62,12 +62,13 @@ services:
       context: ./backend
       dockerfile: Dockerfile.dev
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/starter_app_dev
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/sertantai_hub_dev
       FRONTEND_URL: http://localhost:5173
       ELECTRIC_URL: http://electric:3000
       SECRET_KEY_BASE: ${SECRET_KEY_BASE:-dev-secret-key-base-min-64-chars-required-for-security}
       GUARDIAN_SECRET_KEY: ${GUARDIAN_SECRET_KEY:-dev-guardian-secret}
-      GUARDIAN_ISSUER: starter_app
+      GUARDIAN_ISSUER: sertantai_hub
+      AUTH_SERVICE_URL: http://host.docker.internal:4000
       MIX_ENV: dev
       PORT: 4006
     ports:
@@ -77,7 +78,7 @@ services:
       - backend_build:/app/_build
       - backend_deps:/app/deps
     networks:
-      - starter_app_network
+      - sertantai_hub_network
     depends_on:
       postgres:
         condition: service_healthy
@@ -93,7 +94,7 @@ services:
       dockerfile: Dockerfile.dev
     environment:
       PUBLIC_API_URL: http://localhost:4006
-      PUBLIC_ELECTRIC_URL: http://localhost:3000  # New Electric HTTP API
+      PUBLIC_ELECTRIC_URL: http://localhost:3000 # New Electric HTTP API
       PUBLIC_ENV: development
       PUBLIC_ENABLE_DEBUG: "true"
     ports:
@@ -102,7 +103,7 @@ services:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
     networks:
-      - starter_app_network
+      - sertantai_hub_network
     restart: unless-stopped
     command: npm run dev
 
