--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # Production environment variables (override these in deployment)
-VITE_API_URL=https://app.yourdomain.com/api
+VITE_API_URL=https://sertantai.com
