--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,8 @@
 	"dependencies": {
 		"@electric-sql/client": "^1.1.3",
 		"@tanstack/db": "^0.5.0",
-		"@tanstack/svelte-query": "^5.90.2"
+		"@tanstack/svelte-query": "^5.90.2",
+		"@types/qrcode": "^1.5.6",
+		"qrcode": "^1.5.4"
 	}
 }
