feat: add EdDSA/JWKS JWT validation infrastructure
- Add JwksClient GenServer (fetches/caches public key from sertantai-auth JWKS)
- Add LoadFromCookie plug (promotes sertantai_token cookie to Bearer header)
- Add AuthPlug (validates EdDSA tokens, sets user/org/role assigns)
- Add api_authenticated pipeline to router
- Add JOSE dependency, update configs (auth_url, test_mode, jwks_req_plug)
- Add test helpers and full test coverage (35 tests pass)
- Clean up .env.example (remove Guardian/shared secret placeholders)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -51,16 +51,11 @@ ELECTRIC_WRITE_TO_PG_MODE=direct_writes
 AUTH_SERVICE_URL=http://localhost:4000
 
 # ==============================================================================
-# Authentication (if using)
+# Authentication (EdDSA/JWKS)
 # ==============================================================================
-# Generate GUARDIAN_SECRET_KEY with: mix guardian.gen.secret
-GUARDIAN_SECRET_KEY=<generate-with-mix-guardian.gen.secret>
-GUARDIAN_ISSUER=sertantai_hub
-TOKEN_SIGNING_SECRET=<generate-secure-secret>
-
-# Shape Tokens
-SHAPE_TOKEN_TTL=3600
-SHAPE_TOKEN_TYPE=Bearer
+# URL of sertantai-auth for JWKS public key fetching (JWT verification)
+# JwksClient fetches EdDSA public key from {AUTH_URL}/.well-known/jwks.json
+AUTH_URL=http://localhost:4000
 
 # ==============================================================================
 # Environment
